@@ -15,6 +15,8 @@ Current Version (5.3-dev, SVN trunk):
 - Several enhancements to STYLEITEM AUTO support for labels (#2708) and
   TTF symbols (#2721) in OGR layers 
 
+- Expose special attributes OGR:LabelText, OGR:LAbelAngle, OGR:LabelSize
+  and OGR:LabelColor to MapScript getShape() calls (#2719)
 
 Version 5.2.0 (2008-07-16):
 ---------------------------
